Create Calculator and tests
NOTE: Tests do not currently work -- how do I run tests when there is
references to a DOM page? Calculator is mostly functional but decimals
are not yet implimented.

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/ksmeehan/odin-calculator#readme",
   "devDependencies": {
+    "jsdom": "^27.2.0",
     "vitest": "^4.0.10"
   }
 }
